Add custom committer identity support
Introduce `PersonIdentWrapper` record for committer name and email.
Users can now specify their name and email for commits using new
`--name` and `--email` CLI options. If not provided, the tool
will read `person-ident` from `smartcommit-config.json`.

Update `gitCommit` to use the specified or configured identity.
Refactor `FileUtils` to manage the new `person-ident` configuration.
Modify `gitPush` to push to the current working branch, rather than
hardcoding 'main', making it more flexible for diverse workflows.